--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-json": "^6.0.0",
 		"@rollup/plugin-node-resolve": "^13.1.3",
+		"@rollup/plugin-terser": "^0.2.1",
 		"@rollup/plugin-typescript": "^8.0.0",
 		"@rollup/plugin-wasm": "^6.1.1",
 		"@tsconfig/svelte": "^2.0.1",
