--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"version": "1.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"build": "rollup -c",
 		"dev": "rollup -c -w"
@@ -11,8 +12,7 @@
 		"@rollup/plugin-node-resolve": "^13.1.3",
 		"@rollup/plugin-terser": "^0.2.1",
 		"@rollup/plugin-typescript": "^8.0.0",
-		"@rollup/plugin-wasm": "^6.1.1",
-		"@tsconfig/svelte": "^2.0.1",
+		"@rollup/plugin-url": "^8.0.1",
 		"rollup": "^2.3.4",
 		"rollup-plugin-scss": "^4.0.0",
 		"rollup-plugin-sourcemaps": "^0.6.3",
@@ -25,6 +25,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"@ffmpeg/ffmpeg": "^0.11.6"
+		"@ffmpeg/ffmpeg": "^0.11.6",
+		"helion": "link:/Users/morgannew/Desktop/code/web/misc/npm-packages/helion-v2"
 	}
 }
