--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"module": "ESNext",
 		"target": "ESNext",
 
-		"moduleResolution": "node",
+		"moduleResolution": "node16",
 		"allowSyntheticDefaultImports": true,
 
     "importsNotUsedAsValues": "error",
