--- a/package.json
+++ b/package.json
@@ -3,29 +3,18 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "rollup -c",
-		"dev": "rollup -c -w"
+		"build": "vite build",
+		"dev": "vite dev"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^21.0.1",
-		"@rollup/plugin-json": "^6.0.0",
-		"@rollup/plugin-node-resolve": "^13.1.3",
-		"@rollup/plugin-terser": "^0.2.1",
-		"@rollup/plugin-typescript": "^8.0.0",
-		"@rollup/plugin-url": "^8.0.1",
-		"rollup": "^2.3.4",
-		"rollup-plugin-scss": "^4.0.0",
-		"rollup-plugin-sourcemaps": "^0.6.3",
-		"rollup-plugin-svelte": "^7.1.0",
-		"sass": "^1.57.1",
-		"svelte": "^3.52.0",
-		"svelte-check": "^2.0.0",
-		"svelte-preprocess": "^4.0.0",
-		"tslib": "^2.4.1",
-		"typescript": "^4.8.4"
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
+		"svelte": "^3.55.1",
+		"vite": "^4.1.2",
+		"vite-plugin-html": "^3.2.0"
 	},
 	"dependencies": {
 		"@ffmpeg/ffmpeg": "^0.11.6",
+		"fontawesome-svgs": "^1.0.2",
 		"helion": "link:/Users/morgannew/Desktop/code/web/misc/npm-packages/helion-v2"
 	}
 }
