--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^2.0.2",
 		"svelte": "^3.55.1",
-		"vite": "^4.1.2",
-		"vite-plugin-html": "^3.2.0"
+		"vite": "^4.1.2"
 	},
 	"dependencies": {
 		"@ffmpeg/ffmpeg": "^0.11.6",
