--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
 		"dev": "vite dev"
 	},
 	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^2.0.2",
-		"svelte": "^3.55.1",
-		"vite": "^4.1.2"
-	},
-	"dependencies": {
 		"@ffmpeg/ffmpeg": "^0.11.6",
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
+		"autoprefixer": "^10.4.16",
 		"fontawesome-svgs": "^1.0.2",
-		"helion": "link:/Users/morgannew/Desktop/code/web/misc/npm-packages/helion-v2"
+		"svelte": "^3.55.1",
+		"tailwindcss": "^3.3.5",
+		"vite": "^4.1.2"
 	}
 }
